--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ koin = "4.1.1"
 coil = "3.3.0"
 ktor = "3.4.0"
 kotlinx-coroutines = "1.10.2"
+gsonVersion = "2.10.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -47,8 +48,10 @@ coil-okhttp = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "c
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
+ktor-client-serialization = { module = "io.ktor:ktor-client-resources", version.ref = "ktor" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+google-gson = {module = "com.google.code.gson:gson", version.ref = "gsonVersion"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
